libs/@local/hashql/ast/tests/ui/lower/expander/use-duplicate-binding.jsonc
//@ run: fail
//@ description: duplicate names in use bindings should error
[
  "::kernel::special_form::use",
  "::core::math",
  { "#tuple": ["add", "add"] },
  //~^ ERROR duplicate import binding `add`
  { "#literal": 0 }
]
